Create ThumbnailList component. WIP: Next page doesn't load.
I created a ThumbnailList component and related files, such
as ThumbnailListController, ThumbnailList JS controller,
and ThumbnailList page. I successfully have ICanHaz, a
Mustache template wrapper, to generate the list view.
However, tap to get to user detail page is still not working.

Signed-off-by: Alex Berg <chexxor@gmail.com>

--- a/Visualforce/src/package.xml
+++ b/Visualforce/src/package.xml
@@ -10,6 +10,7 @@
         <members>FooterController</members>
         <members>HeaderController</members>
         <members>ListController</members>
+        <members>ThumbnailListController</members>
         <members>NavController</members>
         <members>PageController</members>
         <members>RemoteRequest</members>
@@ -30,12 +31,14 @@
         <members>Footer</members>
         <members>Header</members>
         <members>List</members>
+        <members>ThumbnailList</members>
         <members>Nav</members>
         <members>Page</members>
         <name>ApexComponent</name>
     </types>
     <types>
         <members>MobilePage</members>
+        <members>ThumbnailList</members>
         <members>MobilePageWithComponents</members>
         <members>SplitViewTemplate</members>
         <name>ApexPage</name>
@@ -59,6 +62,7 @@
         <members>jqmSVcss</members>
         <members>jqmSVjs</members>
         <members>jqmSVjsMin</members>
+        <members>ICanHaz</members>
         <name>StaticResource</name>
     </types>
     <version>23.0</version>
